'增加markdown和文件上传功能'

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include header %>
+<form method='post'>
+    标题：<br/>
+    <input type="text" name="title" /><br/>
+    <textarea name="post" rows="20" cols="100"></textarea>
+    <input type="submit" value="发表"/>
+</form>
+<%- include footer %>
