--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,14 @@ article{font-size:16px;padding-top:.5em;}
 article a{color:#dd0000;text-decoration:none;}
 article a:hover{color:#333333;text-decoration:underline;}
 .info{font-size:14px;}
+.edit{margin:3px;padding:2px 5px;border-radius:3px;background-color:#f3f3f3;color:#333;font-size:13px;}
+.edit:hover{text-decoration:none;background-color:#f00;color:#fff;-webkit-transition:color .2s linear;}
+#login{ margin-left: 110px; margin-top: 41px; width: 70px;height: 30px;}
+.paging{position: relative}
+.prepage a{text-decoration:none;padding:.5em 1em;color:#ff0000;font-weight:bold;position: absolute;right: 0px;top: 0px;}
+.nextpage a{text-decoration:none;padding:.5em 1em;color:#ff0000;font-weight:bold;position: absolute;right: 0px;top: 0px;}
+.prepage a:hover,.nextpage a:hover{text-decoration:none;background-color:#ff0000;color:#f9f9f9;-webkit-transition:color .2s linear;}
+.page{text-align: center;padding:.5em 1em;display: block;}
+.archive{list-style:none;line-height:28px;}
+.archive h3{margin:0.5em 0;}
+.archive time{float:left;font-size:14px;color:#999999;margin-right:1.2em;}
