--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog</title>
+    <link rel="shortcut icon" href="/images/bitbug_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
@@ -12,14 +13,15 @@
         <h1><%= title %></h1>
     </header>
     <nav>
-        <span><a title="主页" href="/">home</a></span>
+        <span><a title="主页" href="/">主&nbsp;&nbsp;页</a></span>
+        <span><a title="存档" href="/archive">存&nbsp;&nbsp;档</a></span>
         <% if (user) { %>
-            <span><a tittle="上传" href='/upload'>upload</a></span>
-            <span><a title="发表" href="/post">post</a></span>
-            <span><a title="登出" href="/logout">logout</a></span>
+            <span><a tittle="上传" href='/upload'>上&nbsp;&nbsp;传</a></span>
+            <span><a title="发表" href="/post">发&nbsp;&nbsp;表</a></span>
+            <span><a title="登出" href="/logout">登&nbsp;&nbsp;出</a></span>
         <% } else { %>
-            <span><a title="登录" href="/login">login</a></span>
-            <span><a title="注册" href="/reg">register</a></span>
+            <span><a title="登录" href="/login">登&nbsp;&nbsp;录</a></span>
+            <span><a title="注册" href="/reg">注&nbsp;&nbsp;册</a></span>
         <% } %>
     </nav>
     <article>
