--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,8 @@
 </html> -->
 <%- include header %>
   <form method="post">
-    用户名 ：<input type="text" name="name" /><br/>
-    密码   : <input type="password" name="password" /><br/>
-            <input type="submit" value="登录">
+    用户名:<input type="text" name="name" /><br/>
+    密&nbsp;&nbsp;&nbsp;码:<input type="password" name="password" /><br/>
+            <input type="submit" id="login" value="登录">
   </form>
 <%- include footer %>
