--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -11,10 +11,10 @@
 </html> -->
 <%- include header %>
 <form method="post">
-  用户名：  <input type="text" name="name"/><br />
-  密码：    <input type="password" name="password"/><br />
-  确认密码：<input type="password" name="password-repeat"/><br />
-  邮箱：    <input type="email" name="email"/><br />
-           <input type="submit" value="注册"/>
+  用&nbsp;&nbsp;户&nbsp;&nbsp;名&nbsp;:&nbsp;&nbsp;<input type="text" name="name"/><br />
+  密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码&nbsp;:&nbsp;&nbsp;<input type="password" name="password"/><br />
+  确认密码&nbsp;:&nbsp;&nbsp;<input type="password" name="password-repeat"/><br />
+  邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱&nbsp;:&nbsp;&nbsp;<input type="email" name="email"/><br />
+           <input type="submit" id="reg" value="注册"/>
 </form>
 <%- include footer %>
